--- a/Resources/views/Renderers/_actions.html.twig
+++ b/Resources/views/Renderers/_actions.html.twig
@@ -1,9 +1,9 @@
 {% if view_route is defined %}
-    <a href="{{ path(view_route,{'id':dt_item}) }}">view</a>
+    <a href="{{ path(view_route,{'id':dt_item}) }}">View</a>
 {% endif %}
 
 {% if edit_route is defined %}
-    <a href="{{ path(edit_route,{'id':dt_item}) }}">edit</a>
+    <a href="{{ path(edit_route,{'id':dt_item}) }}">Edit</a>
 {% endif %}
 
 {% if delete_route is defined %}
