applied sortOrder method to default twig template

--- a/Resources/views/Main/index.html.twig
+++ b/Resources/views/Main/index.html.twig
@@ -109,6 +109,13 @@
                         "aTargets": [ {{fields|length}}-1  ]
                     }
                 {% endif %}
+            ],
+            'aaSorting': [
+                {% if sortOrder is defined %}
+                    {% for key, value in sortOrder %}
+                        [{{key}}, '{{value}}'],
+                    {% endfor %}
+                {% endif %}
             ]
         });
         eval("var oTable_"+'{{id}}'.split('-').join('_')+"  = $('#{{id}}').dataTable($defaults)");
